nML reference is updated.

--- a/xdocs/nml/nml_language_reference.tex
+++ b/xdocs/nml/nml_language_reference.tex
@@ -268,7 +268,7 @@ their values could stand.
 Constants can help extend nML. Any information about a machine that can be given with
 a single number or string can easily be defined as a constant.
 
-\subsection{Constant Types}
+\subsection{Constant Data Types}
 
 Constants can be represented by integer numbers of inifinite precision and strings.
 Integer constants are cast to specific nML data types depending on the context in
@@ -404,6 +404,10 @@ below defines a variable for storing a 33-bit signed integer value:
 \begin{lstlisting}
 var temp[int(33)]
 \end{lstlisting}
+
+
+\subsection{Aliases}
+
 
 % \lstinputlisting{examples/test.nml}
 
