--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/05/13 MicroTESK 2.3.34 beta
+
+ - Bug fixes and general improvements
+
 2016/05/06 MicroTESK 2.3.33 beta
 
  - Bug fixes and general improvements
