--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/05/20 MicroTESK 2.3.35 beta
+
+ - Registers used for streams are excluded from random selection
+ - Bug fixes and general improvements
+
 2016/05/13 MicroTESK 2.3.34 beta
 
  - Bug fixes and general improvements
