ChangeLog was updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/05/27 MicroTESK 2.3.36 beta
+
+- Bug fixes and general improvements
+  (refactoring in nML translator and ISA model)
+
 2016/05/20 MicroTESK 2.3.35 beta
 
  - Registers used for streams are excluded from random selection
