ChangeLog was updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/06/03 MicroTESK 2.3.37 beta
+
+ - General code improvements
+
 2016/05/27 MicroTESK 2.3.36 beta
 
 - Bug fixes and general improvements
