--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/06/17 MicroTESK 2.3.38 beta
+
+ - General improvements (refactoring in the nML translator)
+
 2016/06/03 MicroTESK 2.3.37 beta
 
  - General code improvements
