--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -327,6 +327,7 @@ Here is the list of options:\\
   --trace-length-limit <arg> & -tll & The maximum length of execution traces of output programs & --generate \\ \hline
   --comments-enabled & -ce & Enables printing comments; if not specified no comments are printed & --generate \\ \hline
   --comments-debug & -cd & Enables printing detailed comments; must be used together with --comments-enabled  & --generate \\ \hline
+  --no-simulation & -ns & Disables simulation of generated test programs on the model & --generate \\ \hline
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
