--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -315,19 +315,20 @@ Here is the list of options:\\
   --arch-dirs <arg> & -ad & Home directories for tested architectures & --generate \\ \hline
   --rate-limit <arg> & -rl & Generation rate limit, causes error when broken & --generate \\ \hline
   --code-file-extension <arg> & -cfe & The output file extension & --generate \\ \hline
+  --code-file-prefix <arg> & -cfp & The output file prefix (file names are as follows prefix{\_}xxxx.ext, where xxxx is a 4-digit decimal number) & --generate \\ \hline
+  --data-file-extension <arg> & -dfe & The data file extension & --generate \\ \hline
+  --data-file-prefix <arg> & -dfp & The data file prefix & --generate \\ \hline
 \end{tabular}
 
 \begin{tabular}{ | p{4cm} | p{1cm} | p{5cm} | p{2.5cm} |}
   \hline
-  --code-file-prefix <arg> & -cfp & The output file prefix (file names are as follows prefix{\_}xxxx.ext, where xxxx is a 4-digit decimal number) & --generate \\ \hline
-  --data-file-extension <arg> & -dfe & The data file extension & --generate \\ \hline
-  --data-file-prefix <arg> & -dfp & The data file prefix & --generate \\ \hline
   --exception-file-prefix <arg> & -efp & The exception handler file prefix & --generate \\ \hline
   --program-length-limit <arg> & -pll & The maximum number of instructions in output programs & --generate \\ \hline
   --trace-length-limit <arg> & -tll & The maximum length of execution traces of output programs & --generate \\ \hline
   --comments-enabled & -ce & Enables printing comments; if not specified no comments are printed & --generate \\ \hline
   --comments-debug & -cd & Enables printing detailed comments; must be used together with --comments-enabled  & --generate \\ \hline
   --no-simulation & -ns & Disables simulation of generated test programs on the model & --generate \\ \hline
+  --time-statistics & -ts & Enables printing time statistics & --generate \\ \hline
 \end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
