--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/06/24 MicroTESK 2.3.39 beta
+
+ - New command-line option --time-statistics (-ts) for printing time statistics
+ - New command-line option --no-simulation (-ns) for disabling simulation
+ - Bug fixes and general improvements
+
 2016/06/17 MicroTESK 2.3.38 beta
 
  - General improvements (refactoring in the nML translator)
