--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/07/08 MicroTESK 2.3.41 beta
+
+- Improvements in the nML translator
+
 2016/07/01 MicroTESK 2.3.40 beta
 
  - New option --default-test-data (-dtd) that enables generation of default
