--- a/ChangeLog
+++ b/ChangeLog
@@ -6,9 +6,17 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/07/15 MicroTESK 2.3.42 beta
+
+ - Test Templates: new rearranger strategy 'sample'
+ - Test Templates: improvements in the 'prepare' function
+ - Test Templates: the 'rand' function can be parameterized with a distribution
+ - Test Generator: new engine 'trivial'
+ - Bug fixes and general improvements
+
 2016/07/08 MicroTESK 2.3.41 beta
 
-- Improvements in the nML translator
+ - Improvements in the nML translator
 
 2016/07/01 MicroTESK 2.3.40 beta
 
