ChangeLog was updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/09/02 MicroTESK 2.3.48 beta
+
+ - Bug fixes and general improvements
+
 2016/08/26 MicroTESK 2.3.47 beta
 
  - Documentation on Ruby code of test templates included into distribution
