nML Docs - small update

--- a/xdocs/nml/nml_language_reference.tex
+++ b/xdocs/nml/nml_language_reference.tex
@@ -409,6 +409,41 @@ var temp[int(33)]
 \subsection{Aliases}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Operators}
+
+Here is the list of predefined nML operators:
+
+\begin{itemize}
+
+\item \textbf{Binary +, --}
+
+\item \textbf{Unary +, --}
+
+\item \textbf{$\ast$, /, \%}
+
+\item \textbf{$\ast\ast$}
+
+\item \textbf{<, >, <=, >=, ==, !=}
+
+\item \textbf{{<}{<}, {>}{>}, \&, |, \^{}, \~{}}
+
+\item \textbf{{<}{<}{<}, {>}{>}{>}}
+
+\item \textbf{!, \&\&, ||}
+
+\item \textbf{::}
+
+\item \textbf{sqrt}
+
+\item \textbf{is{\_}nan}
+
+\item \textbf{is{\_}signaling{\_}nan}
+
+\end{itemize}
+
+
 % \lstinputlisting{examples/test.nml}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
