--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/09/30 MicroTESK 2.3.51 beta
+
+ - Refactoring: meta model as a separate entity
+ - Bug fixes and general improvements
+
 2016/09/16 MicroTESK 2.3.50 beta
 
  - Bug fix in ExprFactory
