--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 ================================================================================
 
 --------------------------------------------------------------------------------
- 2015/09/04 MicroTESK 2.3 beta
+ 2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
 2016/11/03 MicroTESK 2.4.1 beta
@@ -16,6 +16,10 @@
  - Basic facilities for multicore generation (untested, untested)
  - nML: the 'init' attribute was made public
  - Refactoring in the ISA simulator
+
+--------------------------------------------------------------------------------
+ 2015/09/04 MicroTESK 2.3
+--------------------------------------------------------------------------------
 
 2016/10/21 MicroTESK 2.3.52 beta
  - Refactoring in the ISA simulator
@@ -382,7 +386,7 @@
  - Some bug fixes and general improvements were made
 
 --------------------------------------------------------------------------------
- 2015/03/24 MicroTESK 2.2 beta
+ 2015/03/24 MicroTESK 2.2
 --------------------------------------------------------------------------------
 
  2015/08/28 MicroTESK 2.2.17 beta
@@ -561,7 +565,7 @@
  - Several bug fixes and general improvements were made
 
 --------------------------------------------------------------------------------
- 2014/10/18 MicroTESK 2.1 beta
+ 2014/10/18 MicroTESK 2.1
 --------------------------------------------------------------------------------
 
  2015/03/05 MicroTESK 2.1.5 beta
@@ -620,7 +624,7 @@
    was implemented
 
 --------------------------------------------------------------------------------
- 2014/03/20 MicroTESK 2.0 beta
+ 2014/03/20 MicroTESK 2.0
 --------------------------------------------------------------------------------
 
  2014/04/18 MicroTESK 2.0.2 beta
@@ -643,9 +647,9 @@
  wide range of tests (from random to directed) with minimal efforts.
 
 --------------------------------------------------------------------------------
- 2013/02/22 MicroTESK 2.0 alpha
+ 2013/02/22 MicroTESK 2.0
 --------------------------------------------------------------------------------
- 2009/08/20 MicroTESK 1.0 beta
+ 2009/08/20 MicroTESK 1.0
 --------------------------------------------------------------------------------
- Since 2007 MicroTESK 0.0 alpha
+ Since 2007 MicroTESK 0.0
 --------------------------------------------------------------------------------
