--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2016/12/05 MicroTESK 2.4.4 beta
+ - Basic implementation of disassembler
+ - Basic support for 16-bit floating point data types
+ - Bug fixes and general improvements
+
 2016/11/18 MicroTESK 2.4.3 beta
  - Support for binary masks in preparators (test templates)
  - The 'internal' modifier for nML operation was established
