--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/01/13 MicroTESK 2.4.8 beta
+ - Refactoring of simulation logic
+
 2016/12/30 MicroTESK 2.4.7 beta
  - Refactoring of generation and simulation logic
 
