ChangeLog was updated

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/01/20 MicroTESK 2.4.9 beta
+ - Refactoring of simulation logic
+
 2017/01/16 MicroTESK 2.4.8 beta
  - Refactoring of simulation logic
 
