--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/02/03 MicroTESK 2.4.11 beta
+ - Bug fixes and general improvements
+
 2017/01/27 MicroTESK 2.4.10 beta
  - The SAT4J solver has been adapted to be used in the memory engine
  - The .text directive is automatically inserted into code
