--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 --------------------------------------------------------------------------------
 
 2017/02/03 MicroTESK 2.4.11 beta
+ - Memory engine performance has been optimized
  - Bug fixes and general improvements
 
 2017/01/27 MicroTESK 2.4.10 beta
