--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,13 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/02/03 MicroTESK 2.4.12 beta
+ - Support for jumps over instruction blocks (unstable)
+ - Support for generation of tests running on multiple processing elements
+   (unstable)
+ - Improvements in the memory engine
+ - Bug fixes and general improvements
+
 2017/02/03 MicroTESK 2.4.11 beta
  - Memory engine performance has been optimized
  - Bug fixes and general improvements
