--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/02/17 MicroTESK 2.4.13 beta
+
+ - Bug fixes and general improvements
+
 2017/02/10 MicroTESK 2.4.12 beta
  - Support for jumps over instruction blocks (unstable)
  - Support for generation of tests running on multiple processing elements
