--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/03/17 MicroTESK 2.4.15 beta
+
+ - Accurate state modeling during pre-simulation
+ - Bug fixes and general improvements
+
 2017/03/06 MicroTESK 2.4.14 beta
 
  - Support for assertions in nML was implemented
