--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/03/14 MicroTESK 2.4.16 beta
+
+ - Bug fixes and general improvements
+
 2017/03/17 MicroTESK 2.4.15 beta
 
  - Accurate state modeling during pre-simulation
