--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/04/07 MicroTESK 2.4.17 beta
+
+ - Demo specification and test templates for x86
+ - Bug fixes and general improvements
+
 2017/03/14 MicroTESK 2.4.16 beta
 
  - Bug fixes and general improvements
