--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/05/12 MicroTESK 2.4.22 beta
+ - Bug fixes and general improvements
+
 2017/05/05 MicroTESK 2.4.21 beta
  - Bug fixes and general improvements
 
