--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/05/26 MicroTESK 2.4.24 beta
+ - Bug fixes and general improvements
+
 2017/05/19 MicroTESK 2.4.23 beta
  - Changes in generator: external code with fixed origin is generated and
    allocated first
