--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,13 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/06/05 MicroTESK 2.4.25 beta
+ - Support for sections (code and data can be placed into regions defined by
+   the .section directive)
+ - Changes in generator (common mechanism of test situation processing for
+   all generation engines)
+ - Bug fixes and general improvements
+
 2017/05/26 MicroTESK 2.4.24 beta
  - Bug fixes and general improvements
 
