--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/06/09 MicroTESK 2.4.26 beta
+ - Bug fixes and general improvements
+
 2017/06/05 MicroTESK 2.4.25 beta
  - Support for sections (code and data can be placed into regions defined by
    the .section directive)
